--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
                 <p>Copyright 2018 MelvinMuuo Inc.</p>
                 <p>All Rights reserved.</p>
             </div>
+
+            <div id="result"></div>
+
+            <div class="footer">
+                <p>Copyright 2018 MelvinMuuo Inc.</p>
+                <p>All Rights reserved.</p>
+            </div>
+
         </div>
     </body>
 </html>
