add footer and align indentation

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div id="result"></div>
 
             <div class="footer">
-                <p>Copyright 2018 MelvinMuuo Inc.</p>
+                <p>Copyright M. Muteti (c) 2023 </p>
                 <p>All Rights reserved.</p>
             </div>
 
