quiz response selection feedback and score

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
             <div id="result"></div>
 
             <div class="footer">
-                <p>Copyright M. Muteti (c) 2023 </p>
-                <p>All Rights reserved.</p>
+                <p>Copyright M. Muteti (c) 2023. All Rights reserved.</p>
             </div>
 
         </div>
