--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <div class="button1">
                 <!-- Trigger the modal with a button -->
-                <button type="button" class="btn" data-toggle="modal" data-target="#myModal">Click Here!</button>
+                <button type="button" class="btn" data-toggle="modal" data-target="#myModal">Click Me!!</button>
             </div>
 
             <!-- Modal -->
@@ -37,7 +37,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Quiz board is...</h4>
+                        <h4 class="modal-title">The Quiz Board is...</h4>
                     </div>
 
                     <div class="modal-body">
@@ -53,29 +53,29 @@
             </div>
 
             <h3 class="header3">Quiz Board</h3>
-            <div id="answers">
+            <div id="questions">
                 <form id="add">
-                    <p><b>1. Which of the following is correct about features of JavaScript?</b></p>
+                    <p><b><strong>1. Which of the following is correct about features of JavaScript?</strong></b></p>
                     <input type="radio" name="question1" value="wrong" /> JavaScript is a lightweight, interpreted programming language.<br />
                     <input type="radio" name="question1" value="wrong" /> JavaScript is designed for creating network-centric applications.<br />
                     <input type="radio" name="question1" value="wrong" /> JavaScript is complementary to and integrated with Java.<br />
-                    <input type="radio" name="question1" value="right" /> All of the above.<br />
-                    <p><b>2. Which built-in method returns the calling string value converted to lower case?</b></p>
+                    <input type="radio" name="question1" value="right" /> All of the above.<br /><br>
+                    <p><b><strong></strong>2. Which built-in method returns the calling string value converted to lower case?</strong></b></p>
                     <input type="radio" name="question2" value="right" /> toLowerCase()<br />
                     <input type="radio" name="question2" value="wrong" /> toLower()<br />
                     <input type="radio" name="question2" value="wrong" /> changeCase(case)<br />
-                    <input type="radio" name="question2" value="wrong" /> None of the above.<br />
-                    <p><b>3.  Which built-in method removes the last element from an array and returns that element?</b></p>
+                    <input type="radio" name="question2" value="wrong" /> None of the above.<br /><br>
+                    <p><b><strong></strong>3.  Which built-in method removes the last element from an array and returns that element?</strong></b></p>
                     <input type="radio" name="question3" value="wrong" /> last()<br />
                     <input type="radio" name="question3" value="wrong" /> get()<br />
                     <input type="radio" name="question3" value="right" /> pop()<br />
-                    <input type="radio" name="question3" value="wrong" /> None of the above.<br />
-                    <p><b>4. Which of the following function of String object creates a string to be displayed as bold as if it were in a <b> tag?</b></p>
+                    <input type="radio" name="question3" value="wrong" /> None of the above.<br /><br>
+                    <p><b><strong></strong>4. Which of the following function of String object creates a string to be displayed as bold as if it were in a </strong><b> tag?</b></p>
                     <input type="radio" name="question4" value="wrong" /> anchor()<br />
                     <input type="radio" name="question4" value="wrong" /> big()<br />
                     <input type="radio" name="question4" value="wrong" /> blink()<br />
-                    <input type="radio" name="question4" value="right" /> bold()<br />
-                    <p><b>5. Which of the following function of Array object returns a string representing the array and its elements? <b> tag?</b></p>
+                    <input type="radio" name="question4" value="right" /> bold()<br /><br>
+                    <p><b><strong></strong>5. Which of the following function of Array object returns a string representing the array and its elements?</strong><b> tag?</b></p>
                     <input type="radio" name="question5" value="wrong" /> toSource()<br />
                     <input type="radio" name="question5" value="wrong" /> sort()<br />
                     <input type="radio" name="question5" value="wrong" /> splice()<br />
