--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <div class="heading">
             <h1 class="header1">Quiz Board</h1>
             </div>
-                <img class="test1" src="images/test.png" alt="This is an image that represents me" width="140" height="140">
+                <img class="test1" src="images/test.png" alt="This image represents the project" width="150" height="150">
                 <div class="information">
-                <h2 class="header2">What is quiz board?</h2>
+                <h2 class="header2">What is Quiz Board?</h2>
             </div>
 
             <div class="button1">
                 <!-- Trigger the modal with a button -->
-                <button type="button" class="btn" data-toggle="modal" data-target="#myModal">Click Me!!</button>
+                <button type="button" class="btn" data-toggle="modal" data-target="#myModal">Click Here!</button>
             </div>
 
             <!-- Modal -->
@@ -85,7 +85,7 @@
                 </form>
 
                 <div id="result"></div>
-                
+
             </div>
 
             <div class="footer">
