update heading2 content

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     </div>
 
                     <div class="modal-body">
-                        <p>A website that offers multiple choice questions to students. The students get to test their understanding of the content that they have covered.</p>
-                        <p>The student should ensure that they answer all the qusetions.</p>
+                        <p>A website that offers multiple choice questions to students.</p>
                         <p>On completion, click on the submit button upon which you'll receive your results.</p>
+                        <p>All questions are mandatory.</p>
                     </div>
 
                     <div class="modal-footer">
